# newschain

./: .gitignore  .gitmodules  1  CMakeLists.txt  README.md  main.cpp
doc/: basechain.docx
libraries/: CMakeLists.txt
libraries/appbase/: CMakeLists.txt
libraries/appbase/include/app/: application.hpp  logs.hpp  plugin.hpp
libraries/appbase/src/: application.cpp  logs.cpp
libraries/chain/: CMakeLists.txt
libraries/chain/include/news/base/: account_object.hpp  asset.hpp  asset_symbol.hpp  authority.hpp  comment_object.hpp  config.hpp  fixed_string.hpp  hardfork_config.hpp  key_conversion.hpp  operation.hpp  operation_notification.hpp  types.hpp  types_fwd.hpp  version.hpp
libraries/chain/include/news/chain/: block.hpp  block_header.hpp  block_log.hpp  block_summary_object.hpp  config.hpp  database.hpp  evaluator.hpp  evaluator_registry.hpp  exception.hpp  fork_database.hpp  global_property_object.hpp  hardfork_property_object.hpp  news_eveluator.hpp  object_types.hpp  operation_object.hpp  transaction.hpp  transaction_object.hpp
libraries/chain/src/: block.cpp  block_header.cpp  block_log.cpp  database.cpp  transaction.cpp
libraries/chain/src/base/: asset.cpp  key_conversion.cpp  operation.cpp  types.cpp  version.cpp
libraries/chain/src/chain/: block.cpp  block_header.cpp  block_log.cpp  database.cpp  fork_database.cpp  news_eveluator.cpp  transaction.cpp  transaction_object.cpp
libraries/chainbase/: CMakeLists.txt  chainbase
libraries/chainbase/include/chainbase/: chainbase.hpp
libraries/chainbase/src/: chainbase.cpp
libraries/chainbase/test/: CMakeLists.txt  test.cpp  testChainbaseRW.cpp  testFunction.cpp
libraries/fc/: CMakeLists.txt
libraries/fc/include/fc/: asio.hpp  macros.hpp  stacktrace.hpp  static_variant.hpp
libraries/fc/include/fc/exception/: exception.hpp
libraries/fc/include/fc/reflect/: reflect.hpp  variant.hpp
libraries/fc/src/: stacktrace.cpp
libraries/fc/src/compress/: miniz.c
libraries/fc/src/log/: appender.cpp  logger.cpp  logger_config.cpp
libraries/fc/src/network/: rate_limiting.cpp  tcp_socket.cpp
libraries/net/: CMakeLists.txt  message_oriented_connection.cpp  mudo.hpp  node.cpp  peer_connection.cpp  stcp_socket.cpp
libraries/net/include/graphene/net/: config.hpp  core_messages.hpp  node.hpp  node_configuration.hpp  peer_connection.hpp
libraries/plugins/: CMakeLists.txt
libraries/plugins/account_history/: CMakeLists.txt
libraries/plugins/account_history/src/: account_history_plugin.cpp
libraries/plugins/apis/: CMakeLists.txt
libraries/plugins/apis/account_history_api/: CMakeLists.txt
libraries/plugins/apis/account_history_api/include/news/plugins/account_history_api/: account_history_api.hpp  account_history_api_args.hpp  account_history_api_plugin.hpp
libraries/plugins/apis/account_history_api/src/: account_history_api.cpp  account_history_api_plugin.cpp
libraries/plugins/apis/block_api/: CMakeLists.txt
libraries/plugins/apis/block_api/include/news/plugins/block_api_plugin/: block_api.hpp  block_api_args.hpp  block_api_objects.hpp  block_api_plugin.hpp
libraries/plugins/apis/block_api/src/: block_api.cpp  block_api_plugin.cpp
libraries/plugins/apis/chain_api/: CMakeLists.txt
libraries/plugins/apis/chain_api/include/news/plugins/chain_api/: chain_api.hpp  chain_api_plugin.hpp
libraries/plugins/apis/chain_api/src/: chain_api.cpp  chain_api_plugin.cpp
libraries/plugins/apis/database_api/: CMakeLists.txt
libraries/plugins/apis/database_api/include/news/plugins/database_api/: database_api.hpp  database_api_args.hpp  database_api_plugin.hpp
libraries/plugins/apis/database_api/src/: databae_api_plugin.cpp  database_api.cpp
libraries/plugins/apis/network_broadcast_api/: CMakeLists.txt
libraries/plugins/apis/network_broadcast_api/include/news/plugins/network_broadcast_plugin/: network_broadcast_api.hpp  network_broadcast_plugin.hpp
libraries/plugins/apis/network_broadcast_api/src/: network_broadcast_api.cpp  network_broadcast_plugin.cpp
libraries/plugins/chain_plugin/: CMakeLists.txt
libraries/plugins/chain_plugin/src/: chain_plugin.cpp
libraries/plugins/json_rpc/: CMakeLists.txt
libraries/plugins/json_rpc/src/: json_rpc_plugin.cpp
libraries/plugins/p2p/: CMakeLists.txt
libraries/plugins/p2p/include/news/plugins/p2p/: p2p_default_seeds.hpp  p2p_plugin.hpp
libraries/plugins/p2p/src/: p2p_plugin.cpp
libraries/plugins/producer_plugin/: CMakeLists.txt
libraries/plugins/producer_plugin/include/news/plugins/producer_plugin/: producer_plugin.hpp
libraries/plugins/producer_plugin/src/: producer_plugin.cpp
libraries/plugins/webserver/: CMakeLists.txt
libraries/plugins/webserver/src/: webserver_plugin.cpp
libraries/protocol/: CMakeLists.txt
libraries/protocol/include/news/protocol/: asset.hpp  asset_symbol.hpp  config.hpp  key_conversion.hpp  types.hpp
libraries/protocol/src/: types.cpp
libraries/tests/: CMakeLists.txt
libraries/tests/operations/: CMakeLists.txt
libraries/tests/operations/cmdTest/: CMakeLists.txt  main.cpp
libraries/tests/operations/create_account/: CMakeLists.txt  factory.cpp  factory.hpp  main.cpp  types.cpp  types.hpp
libraries/tests/operations/create_account/include/test/: application.hpp  factory.hpp  record.hpp  types.hpp
libraries/tests/operations/create_account/src/: application.cpp  factory.cpp  record.cpp  types.cpp
libraries/tests/operations/db_export/: CMakeLists.txt  main.cpp
libraries/tests/operations/network/: CMakeLists.txt  wsClient.cpp  wsClient.hpp
libraries/tests/operations/test_business/: CMakeLists.txt  factory.cpp  factory.hpp  main.cpp
libraries/tests/operations/transfer/: CMakeLists.txt  factory.cpp  factory.hpp  main.cpp
libraries/tests/ripemd160/: CMakeLists.txt  test..cpp  test.cpp
libraries/tests/sign/: CMakeLists.txt  main.cpp
libraries/tests/testFc/: CMakeLists.txt  testfc.cpp
libraries/tests/verifyapithendocumentthem/: CMakeLists.txt  vdafactory.cpp  vdafactory.hpp  verifyapithendocumentthem.cpp
programs/base/: CMakeLists.txt  main.cpp
(+5 files in other folders)
